src/app/components/content/tripSelector/dateAndTimePicker/DateAndTimePicker.module.css
@import '../../../../../variables.css';

.dateAndTimePickerContainer {
  position: relative;
}

.dateAndTimePickerButton {
  display: grid;
  grid-template-columns: repeat(2, 1fr);

  height: 2.75rem;
  width: 100%;
  padding: 0.5rem;

  background-color: #f2f2f2;
  border-radius: 0.625rem;

  border: 0;
  cursor: pointer;
  outline: none;

  font-size: 1rem;
  font-weight: 500;
}

.dateAndTimePickerButton:is(:hover, :focus) {
  background-color: #bdbdbd;
}

.date {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;

  height: 100%;
  width: 100%;

  border-right: 1px solid #828282;
}

.date > svg {
  min-width: 1.25rem;
  max-width: 1.25rem;
  min-height: 1.25rem;
  max-height: 1.25rem;
}

.time {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;

  height: 100%;
  width: 100%;

  border-left: 1px solid #828282;
}

.time > svg {
  min-width: 1.25rem;
  max-width: 1.25rem;
  min-height: 1.25rem;
  max-height: 1.25rem;
}

.menu {
  position: absolute;

  width: 100%;
  padding: 1rem;

  box-shadow: 0 0 0.25rem 0 grey;
  background-color: white;
}

.inputFields {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
  column-gap: 1.5rem;
}

.inputFields input {
  width: 100%;
}

.inputFields label {
  font-weight: 700;
  font-size: 1rem;
}

.dateInput {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(10px, 1fr));
}

.dateInput::-webkit-calendar-picker-indicator {
  justify-self: end;
}

.footer {
  display: flex;
  justify-content: flex-end;
  gap: 1rem;

  margin-top: 2rem;

  font-size: 1rem;
  font-weight: 700;
  line-height: 1.25rem;
}

.nowButton {
  height: 2.5rem;
  padding: 0.5rem 0.75rem;

  border-radius: 0.625rem;
  border: 2px solid var(--primary-color);

  color: var(--primary-color);

  cursor: pointer;
  outline: none;
  background: none;
}

.selectButton {
  height: 2.5rem;
  padding: 0.5rem 0.75rem;

  background-color: var(--primary-light-color);
  border-radius: 0.625rem;

  color: white;

  border: 0;
  cursor: pointer;
  outline: none;
}

@media only screen and (max-width: 480px) {
  .dateAndTimePickerButton:hover,
  .dateAndTimePickerButton:focus {
    background-color: #f2f2f2;
  }
}

